[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]

[node name="ColorRect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 373.358
margin_top = 285.905
margin_right = 660.358
margin_bottom = 327.905
custom_fonts/font = ExtResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 385.131
margin_top = 415.403
margin_right = 651.131
margin_bottom = 457.403
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "Main Menu"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LinkButton" to="LinkButton" method="_on_BackToMainMenu_pressed"]
